--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
 # The URL of your website.
 # End your URL with a `/` trailing slash, e.g. `https://example.com/`.
-baseurl = "https://example.com/"
+baseurl = "/"
 
 # Title of your site
 title = "Yale-PCORI Patient Preference"
